[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://fps.gd" type="Script" id=2]
[ext_resource path="res://Scenes/level_selection.tscn" type="PackedScene" id=3]

[node name="GameManager" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 2 )

[node name="player1_spawn" type="Position2D" parent="."]

transform/pos = Vector2( 270.714, 400.467 )

[node name="player2_spawn" type="Position2D" parent="."]

transform/pos = Vector2( 813.748, 397.813 )

[node name="level_selection" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="level_selection/buttons/btn_level1" to="." method="_on_btn_level1_pressed"]

[connection signal="pressed" from="level_selection/buttons/btn_level2" to="." method="_on_btn_level2_pressed"]

[connection signal="pressed" from="level_selection/buttons/btn_quit" to="." method="_on_btn_quit_pressed"]


[editable path="level_selection"]
